--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -1,3 +1,6 @@
 #index:
 #    path: /
 #    controller: App\Controller\DefaultController::index
+registerRoute:
+  path: /register-route
+  controller: App\Controller\RouteRegistrationController:index
