--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -1,3 +1,8 @@
 #index:
 #    path: /
 #    controller: App\Controller\DefaultController::index
+#public function index() {
+#$allShifts = $this->getDoctrine()->getRepository(WorkShift::class)->findAll();
+#
+#return $this->render('registration/route-register.html.twig', ['allShifts' => $allShifts]);
+#}
