migration for dummy user data, controller methods to find matches

--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -7,3 +7,6 @@ registerRoute:
 saveRoute:
   path: /route-save
   controller: App\Controller\RouteRegistrationController:store
+matches:
+  path: /matches
+  controller: App\Controller\MatchController:index
