--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -2,7 +2,7 @@
 #    path: /
 #    controller: App\Controller\DefaultController::index
 registerRoute:
-  path: /register-route
+  path: /reg
   controller: App\Controller\RouteRegistrationController:index
 saveRoute:
   path: /route-save
