--- a/config/services.yaml
+++ b/config/services.yaml
@@ -30,3 +30,6 @@ services:
     match_maker.service:
         class: App\Service\MatchMaker
         arguments: [ "@doctrine.orm.entity_manager" ]
+    match_data_service.service:
+        class: App\Service\MatchDataService
+        arguments: [ "@doctrine.orm.entity_manager" ]
