--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
     "devDependencies": {
+        "@material/select": "^2.1.1",
         "@material/textfield": "^1.0.1",
         "@symfony/webpack-encore": "^0.26.0",
         "bootstrap": "^4.3.1",
