--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -1,16 +1,15 @@
 # config/packages/security.yaml
 security:
     encoders:
-        FOS\UserBundle\Model\UserInterface: bcrypt
+        App\Entity\User:
+            algorithm: argon2i
 
-    role_hierarchy:
-        ROLE_ADMIN:       ROLE_USER
-        ROLE_SUPER_ADMIN: ROLE_ADMIN
-
-    # https://symfony.com/doc/current/security.html#where-do-users-come-from-user-providers
     providers:
-        fos_userbundle:
-            id: fos_user.user_provider.username_email
+        # used to reload user from session & other features (e.g. switch_user)
+        app_user_provider:
+            entity:
+                class: App\Entity\User
+                property: email
 
     firewalls:
         dev:
@@ -18,17 +17,19 @@ security:
             security: false
         main:
             pattern: ^/
+            anonymous: true
             form_login:
-                provider: fos_userbundle
-                csrf_token_generator: security.csrf.token_manager
+                check_path: login
+                login_path: login
+            logout:
+                path: security_logout
+                target: homepage
+            guard:
+                authenticators:
+                    - App\Security\LoginFormAuthenticator
 
-            logout:       true
-            anonymous:    true
 
-    # Easy way to control access for large sections of your site
-    # Note: Only the *first* access control that matches will be used
-    access_control:
-    - { path: ^/login$, role: IS_AUTHENTICATED_ANONYMOUSLY }
-    - { path: ^/register, role: IS_AUTHENTICATED_ANONYMOUSLY }
-    - { path: ^/resetting, role: IS_AUTHENTICATED_ANONYMOUSLY }
-    - { path: ^/admin/, role: ROLE_ADMIN }
+
+
+
+
