--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "symfony/flex": "^1.1",
         "symfony/framework-bundle": "4.2.6",
         "symfony/orm-pack": "^1.0",
+        "symfony/security-bundle": "4.2.*",
         "symfony/swiftmailer-bundle": "^3.2",
         "symfony/translation": "4.2.*",
         "symfony/twig-bundle": "4.2.*",
