--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,13 @@
         "symfony/translation": "4.2.*",
         "symfony/twig-bundle": "4.2.*",
         "symfony/webpack-encore-bundle": "^1.4",
-        "symfony/yaml": "4.2.*"
+        "symfony/yaml": "4.2.*",
+        "symfony/templating": "~3.4|~4.0",
+        "symfony/validator": "^4.1",
+        "symfony/var-dumper": "~3.4|~4.0",
+        "symfony/web-link": "~3.4|~4.0",
+        "symfony/workflow": "^4.1",
+        "twig/twig": "~1.34|~2.4"
     },
     "config": {
         "preferred-install": {
