--- a/composer.json
+++ b/composer.json
@@ -8,20 +8,22 @@
         "symfony/asset": "4.2.*",
         "symfony/console": "4.2.*",
         "symfony/dotenv": "4.2.*",
+        "symfony/expression-language": "4.2.*",
         "symfony/flex": "^1.1",
+        "symfony/form": "4.2.*",
         "symfony/framework-bundle": "4.2.6",
         "symfony/orm-pack": "^1.0",
         "symfony/security-bundle": "4.2.*",
         "symfony/swiftmailer-bundle": "^3.2",
+        "symfony/templating": "~3.4|~4.0",
         "symfony/translation": "4.2.*",
         "symfony/twig-bundle": "4.2.*",
-        "symfony/webpack-encore-bundle": "^1.4",
-        "symfony/yaml": "4.2.*",
-        "symfony/templating": "~3.4|~4.0",
         "symfony/validator": "^4.1",
         "symfony/var-dumper": "~3.4|~4.0",
         "symfony/web-link": "~3.4|~4.0",
+        "symfony/webpack-encore-bundle": "^1.4",
         "symfony/workflow": "^4.1",
+        "symfony/yaml": "4.2.*",
         "twig/twig": "~1.34|~2.4"
     },
     "config": {
