--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -2,7 +2,7 @@
 security:
     encoders:
         App\Entity\User:
-            algorithm: BCrypt
+            algorithm: bcrypt
 
     providers:
         # used to reload user from session & other features (e.g. switch_user)
