--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,7 @@
         "symfony/var-dumper": "~3.4|~4.0",
         "symfony/web-link": "~3.4|~4.0",
         "symfony/webpack-encore-bundle": "^1.4",
-        "symfony/workflow": "^4.1",
+        "symfony/workflow": "4.2.*",
         "symfony/yaml": "4.2.*",
         "twig/twig": "~1.34|~2.4"
     },
