--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -27,7 +27,12 @@ security:
             guard:
                 authenticators:
                     - App\Security\LoginFormAuthenticator
-
+    access_control:
+    - { path: ^/matches, roles: ROLE_USER }
+    - { path: ^/reg, roles: ROLE_USER }
+    - { path: ^/edit, roles: ROLE_USER }
+    - { path: ^/login, role: IS_AUTHENTICATED_ANONYMOUSLY }
+    - { path: ^/register, role: IS_AUTHENTICATED_ANONYMOUSLY }
 
 
 
