--- a/config/services.yaml
+++ b/config/services.yaml
@@ -30,3 +30,5 @@ services:
     match_maker.service:
         class: App\Service\MatchMaker
         arguments: [ "@doctrine.orm.entity_manager" ]
+    array_paginator.service:
+        class: App\Service\ArrayPaginator
