--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -29,10 +29,9 @@ security:
                     - App\Security\LoginFormAuthenticator
     access_control:
     - { path: ^/matches, roles: ROLE_USER }
-    - { path: ^/reg, roles: ROLE_USER }
+    - { path: ^/info, roles: ROLE_USER }
     - { path: ^/edit, roles: ROLE_USER }
-    - { path: ^/login, role: IS_AUTHENTICATED_ANONYMOUSLY }
-    - { path: ^/register, role: IS_AUTHENTICATED_ANONYMOUSLY }
+
 
 
 
