--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -2,7 +2,7 @@ homepage:
     path: /
     controller: App\Controller\HomeController::index
 register_route:
-  path: /reg
+  path: /info
   controller: App\Controller\RouteRegistrationController:index
 save_route:
   path: /route-save
